<resources>
    <string name="app_name">Notes</string>
    <string name="my_notes">My Notes</string>
    <string name="search_notes">Search notes</string>
    <string name="note_title">Note title</string>
    <string name="note_subtitle">Note Subtitle</string>
    <string name="type_note_here">Type note here..</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="pick_color">Pick Color</string>
    <string name="value_color">%s</string>
    <string name="add_image">Add image</string>
    <string name="add_url">Add URL</string>
    <string name="enter_url">Enter URL</string>
    <string name="add">ADD</string>
    <string name="cancel">CANCEL</string>
    <string name="delete_note">Delete note</string>
    <string name="are_you_sure_you_want_to_delete_this_note">Are you sure you want to delete this note!</string>
</resources>