<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor"
    tools:context=".ui.CreateNoteFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/_40sdp"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/_10sdp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true">

            <LinearLayout
                android:id="@+id/layout_back"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_30sdp"
                android:orientation="horizontal"
                android:layout_marginStart="@dimen/_6sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:gravity="center_vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/image_back"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_back"
                    app:tint="@color/accentColor" />

                <TextView
                    android:id="@+id/text_note"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my_notes"
                    android:textColor="@color/accentColor"
                    android:textSize="@dimen/_14ssp" />

            </LinearLayout>

            <ImageView
                android:id="@+id/image_save"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:background="@drawable/background_done"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/_4sdp"
                android:src="@drawable/ic_done"
                app:layout_constraintBottom_toBottomOf="@id/layout_back"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/layout_back"
                app:tint="@color/accentColor" />

            <EditText
                android:id="@+id/input_note_title"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:background="@null"
                android:fontFamily="@font/ubuntu_bold"
                android:hint="@string/note_title"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textColor="@color/whiteColor"
                android:textColorHint="@color/textHintColor"
                android:textSize="@dimen/_16ssp"
                app:layout_constraintTop_toBottomOf="@id/layout_back" />

            <TextView
                android:id="@+id/text_date_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_regular"
                android:includeFontPadding="false"
                android:textColor="@color/iconsColor"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintEnd_toEndOf="@id/input_note_title"
                app:layout_constraintStart_toStartOf="@id/input_note_title"
                app:layout_constraintTop_toBottomOf="@id/input_note_title" />

            <EditText
                android:id="@+id/input_note_subtitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:background="@null"
                android:fontFamily="@font/ubuntu_medium"
                android:hint="@string/note_subtitle"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="textMultiLine"
                android:paddingTop="@dimen/_8sdp"
                android:paddingBottom="@dimen/_8sdp"
                android:textColor="@color/textSubtitleColor"
                android:textColorHint="@color/textHintColor"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/view_subtitle_indicator"
                app:layout_constraintTop_toBottomOf="@id/text_date_time" />

            <View
                android:id="@+id/view_subtitle_indicator"
                android:layout_width="@dimen/_5sdp"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/_12sdp"
                android:background="@drawable/background_subtitle_indicator"
                app:layout_constraintBottom_toBottomOf="@id/input_note_subtitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/input_note_subtitle" />
            
            <ImageView
                android:id="@+id/image_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/input_note_subtitle" />

            <EditText
                android:id="@+id/input_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                android:background="@null"
                android:fontFamily="@font/ubuntu_regular"
                android:gravity="top"
                android:hint="@string/type_note_here"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="textMultiLine"
                android:minHeight="@dimen/_100sdp"
                android:textColor="@color/whiteColor"
                android:textColorHint="@color/textHintColor"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image_note" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <include android:id="@+id/miscellaneous" layout="@layout/layout_miscellaneous" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>